--- a/es/style.css
+++ b/es/style.css
@@ -30,7 +30,7 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 6vw;
+    font-size: 7vw;
 }
 
 h2 {
@@ -69,7 +69,11 @@ strong {
     flex-direction: column;
     align-items: center;
     background-color: #272135;
+    h1 {
+        margin: 0;
+    }
 }
+
 
 .what {
     padding: 5vw 12vw;
@@ -88,10 +92,21 @@ strong {
     background-color: #11111c;
 }
 
+.need {
+    padding: 5vw 0vw; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #11111c;
+    h2 {
+        margin: 0;
+    }
+}
+
 .checkboxes {
     display: flex;
     padding: 0 10%;
-    background-color: #11111c;
+    gap: 4vw;;
 }
 
 .tools, .mats {
