--- a/es/style.css
+++ b/es/style.css
@@ -30,28 +30,19 @@ h1, h2 {
 }
 
 h1 {
-    font-size: 7vw;
+    font-size: 80px;
 }
 
 h2 {
-    font-size: 4vw;
+    font-size: 48px;
 }
 
 h3 {
-    font-size: 2.5vw;
-}
-
-hr {
-    margin: 0;
-    height: 0.2vw;
-    width: 5vw;
-    background-color: #444444;
-    border: none;
-    border-radius: 0.1vw;
+    font-size: 30px;
 }
 
 p, li, label {
-    font-size: 2vw;
+    font-size: 18px;
 }
 
 li {
@@ -59,61 +50,71 @@ li {
 }
 
 strong {
+    padding: 0 5px;
     color: #ffffff;
     background-color: #9f0dcf;
 }
 
 .header {
-    padding: 10vw 12vw;
+    padding: 200px 72px;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+    text-align: center;
+    gap: 30px;
     background-color: #272135;
-    h1 {
+    h1, h3 {
         margin: 0;
     }
 }
 
-
 .what {
-    padding: 5vw 12vw;
+    padding: 60px 150px;
     background-color: #11111c;
 }
 
+ol {
+    padding: 0 18px;
+}
+
 .cautions {
-    padding: 5vw 12vw;
+    padding: 60px 150px;
     background-color: #272135;
 }
 
 .caution {
-    margin: 5vw 0vw;
-    padding: 2vw 5vw;
-    border-radius: 2vw;
+    margin: 60px 0;
+    padding: 24px 60px;
+    border-radius: 24px;
     background-color: #11111c;
 }
 
 .need {
-    padding: 5vw 0vw; 
+    padding: 60px 0; 
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #11111c;
-    h2 {
+    h2, p {
+        text-align: center;
         margin: 0;
     }
 }
 
 .checkboxes {
     display: flex;
-    padding: 0 10%;
-    gap: 4vw;;
+    margin: 50px;
+    padding: 50px;
+    gap: 50px;
+    border-radius: 24px;
+    background-color: #272135;
 }
 
 .tools, .mats {
-    margin: 5vw 0vw;
-    padding: 2vw 5vw;
-    border-radius: 2vw;
-    background-color: #272135;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
 .tools {
@@ -121,7 +122,19 @@ strong {
 }
 
 .mats {
+}
 
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.form {
+    padding: 60px 0; 
+    display: flex;
+    flex-direction: column;
+    background-color:#272135;
 }
 
 
