--- a/es/style.css
+++ b/es/style.css
@@ -72,6 +72,9 @@ strong {
 .what {
     padding: 60px 150px;
     background-color: #11111c;
+    h2 {
+        margin-top: 0;
+    }
 }
 
 ol {
@@ -127,7 +130,40 @@ ol {
 .list {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+}
+
+.item {
+    display: grid;
+    margin: 0.5em;
+    grid-template-columns: 1em auto;
+    gap: 0.7em;
+}
+
+
+input[type="checkbox"] {
+    appearance: none;
+    font: inherit;
+    color: currentColor;
+    width: 1.15em;
+    height: 1.15em;
+    border: 0.15em solid currentColor;    
+    border-radius: 0.15em;
+    transform: translateY(-0.075em);
+    display: grid;
+    place-content: center;
+}
+
+input[type="checkbox"]::before {
+    content: "";
+    width: 0.65em;
+    height: 0.65em;
+    transform: scale(0);
+    box-shadow: inset 1em 1em white;
+    clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+}
+
+input[type="checkbox"]:checked::before {
+    transform: scale(1);
 }
 
 .form {
