--- a/es/style.css
+++ b/es/style.css
@@ -21,7 +21,7 @@ body {
     color:#ffffff;
 }
 
-h1, h2, h3, h4 {
+h1, h2, h3, h4, .uploadBtn, .submitBtn {
     font-family: "Open Sans Bold", sans-serif;
 }
 
@@ -34,7 +34,7 @@ h1 {
 }
 
 h2 {
-    font-size: 48px;Lijar madera
+    font-size: 48px;
 }
 
 h3 {
@@ -54,7 +54,9 @@ strong {
     color: #ffffff;
     background-color: #9f0dcf;
 }
-
+{
+    font
+}
 .header {
     padding: 200px 72px;
     display: flex;
@@ -210,19 +212,18 @@ input[type="checkbox"]:checked::before {
     }
 }
 
-input[type=text] {
+input[type=text], textarea {
     padding: 15px 10px;
     box-sizing: border-box;
     border: 2px solid transparent;
     border-radius: 5px;
-    
     background-color: #11111c;
     font-size: 18px;
     color: whitesmoke;
     transition: 0.3s;
 }
 
-input[type=text]:focus {
+input[type=text]:focus, textarea:focus {
     outline: none;
     border: 2px solid #9f0dcf;
 }
@@ -239,7 +240,6 @@ input[type=text]:focus {
     border: none;
     border-radius: 6px;
     background-color: #9f0dcf;
-    font-family: "Open Sans Bold", sans-serif;
     color: #ffffff;
 }
 
@@ -247,17 +247,23 @@ input[type=text]:focus {
     height: 200px
 }
 
+textarea {
+    resize: none;
+}
+
+
 .submit {
     display: flex;
     justify-content: center;
 }
 
 .submitBtn {
-    padding: 4px 6px;
+    flex: 1;
+    padding: 10px;
     border: none;
     border-radius: 6px;
     background-color: #9f0dcf;
-    font-family: "Open Sans Bold", sans-serif;
+    font-size: 24px;
     color: #ffffff;
 }
 
