--- a/es/style.css
+++ b/es/style.css
@@ -101,52 +101,50 @@ ol {
     flex-direction: column;
     align-items: center;
     background-color: #11111c;
-    h2, p {
-        text-align: center;
-        margin: 0;
-    }
+}
+
+.title {
+    text-align: center;
+    margin: 0;
 }
 
 .checkboxes {
     display: flex;
-    margin: 50px;
+    margin: 50px 150px;
     padding: 50px;
-    gap: 50px;
     border-radius: 24px;
     background-color: #272135;
 }
 
 .needles {
-    display: flex;
-    flex-direction: column;
+    margin: 0 25px;
     gap: 25px;
 }
 
 .list {
     display: flex;
     flex-direction: column;
-    h4 {
-        margin: 0.5em;
-    }
+    gap: 0.5em;
 }
 
 .item {
     display: grid;
-    margin: 0.5em;
     grid-template-columns: 1em auto;
-    gap: 0.8em;
+    gap: 0.5em;
 }
 
-
 input[type="checkbox"] {
-    appearance: none;
+    appearance: none;   
+    vertical-align: middle; 
+    position: relative;
+    bottom: -0.05em;
+    width: 1em;
+    height: 1em;
     font: inherit;
-    color: currentColor;
-    width: 1.15em;
-    height: 1.15em;
-    border: 0.15em solid currentColor;    
+    color: #ffffff;
+    background-color: #11111c;
+    border: 0.15em solid #ffffff;
     border-radius: 0.15em;
-    transform: translateY(-0.075em);
     display: grid;
     place-content: center;
 }
