--- a/es/style.css
+++ b/es/style.css
@@ -52,6 +52,10 @@ p, li, label {
     font-size: 1em;
 }
 
+ol {
+    padding: 0 1em;
+}
+
 li {
     margin: 0.5em 0;
 }
@@ -67,7 +71,7 @@ strong {
 }
 
 .top {
-    padding: 10em 4em;
+    padding: 12.5% 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -85,28 +89,24 @@ strong {
 }
 
 .what {
-    padding: 4em 10em;
+    padding: 5% 12.5%;
     background-color: #11111c;
 }
 
-ol {
-    padding: 0 1em;
-}
-
 .cautions {
-    padding: 4em 10em;
+    padding: 5% 12.5%;
     background-color: #272135;
 }
 
 .caution {
-    margin: 4em 0;
-    padding: 2.5em 4em;
+    margin: 5% 0;
+    padding: 4% 5%;
     border-radius: 24px;
     background-color: #11111c;
 }
 
 .need {
-    padding: 4em 10em; 
+    padding: 5% 12.5%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -121,7 +121,7 @@ ol {
 .checkboxes {
     display: flex;
     gap: 2em;
-    margin: 4em 8em;
+    margin: 5% 10%;
     background-color: #11111c;
 }
 
@@ -177,8 +177,12 @@ input[type="checkbox"]:checked::before {
     transform: scale(1);
 }
 
+input[type="checkbox"]:focus {
+    outline: #920ebd solid 2px;
+}
+
 .steps {
-    padding: 4em;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -210,8 +214,8 @@ input[type="checkbox"]:checked::before {
 .step {
     display: flex;
     flex-direction: column;
-    margin: 3em 11em;
-    padding: 2em 3.5em;
+    margin: 3.75% 13.75%;
+    padding: 2.5% 3.5%;
     border-radius: 24px;
     background-color: #11111c;
     text-align: left;
@@ -221,7 +225,7 @@ input[type="checkbox"]:checked::before {
     display: flex;
     flex-direction: column;
     gap: 1em;
-    margin: -0.5em 0 2em;
+    margin: -0.6% 0 2.5%;
 }
 
 .photo {
@@ -231,7 +235,7 @@ input[type="checkbox"]:checked::before {
 }
 
 .feedback {
-    padding: 4em 10em; 
+    padding: 5% 12.5%;
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -239,8 +243,8 @@ input[type="checkbox"]:checked::before {
 }
 
 .form {
-    margin: 2em 5em;
-    padding: 1.5em 2em;
+    margin: 2.5% 5.35%;
+    padding: 3%;
     text-align: left;
     border-radius: 24px;
     background-color: #272135;
@@ -260,7 +264,8 @@ input[type="checkbox"]:checked::before {
 input[type=text], textarea {
     padding: 0.8em;
     box-sizing: border-box;
-    border: 2px solid transparent;
+    border: none;
+    outline: transparent solid 3px;
     border-radius: 5px;
     background-color: #11111c;
     font-size: 1em;
@@ -269,14 +274,17 @@ input[type=text], textarea {
 }
 
 input[type=text]:focus, textarea:focus {
-    outline: none;
-    border: 2px solid #920ebd;
+    outline: #920ebd solid 3px;
 }
 
 #nameDiv, #imgDiv {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+#nameDiv {
+    margin-top: 0;
 }
 
 #nameInput {
