--- a/es/style.css
+++ b/es/style.css
@@ -88,12 +88,12 @@ strong {
 .what {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 6% 7.5% 1%;
     background-color: #11111c;
 }
 
 .cautions {
+    padding: 1em 0;
     background-color: #272135;
 }
 
@@ -133,7 +133,7 @@ strong {
 .needles {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: start;
     padding: 10%;
     gap: 0.5em;
     border-radius: 24px;
@@ -189,7 +189,7 @@ input[type="checkbox"]:focus {
 }
 
 .steps {
-    padding: 5%;
+    padding: 5% 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -197,8 +197,15 @@ input[type="checkbox"]:focus {
     text-align: center;
 }
 
+.stepsTitle {
+    padding: 5% 3% 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 .wallType {
-    margin: 1em 0;
+    margin: 1em 5%;
     display: flex;
     gap: 1em;
 }
@@ -215,14 +222,23 @@ input[type="checkbox"]:focus {
 
 .wallBtn:hover {
     transition: 0.25s;
-    scale: 1.025;
+    scale: 1.05;
+}
+
+#concreteSteps {
+    display: flex;
+    flex-direction: column;
+    gap: 2em;
+    margin: 5%;
+    h3 {
+        margin: 0
+    }
 }
 
 .step {
     display: flex;
     flex-direction: column;
-    margin: 3.75% 15%;
-    padding: 2.5% 3.5%;
+    padding: 10% 7.5%;
     border-radius: 24px;
     background-color: #11111c;
     text-align: start;
@@ -231,8 +247,7 @@ input[type="checkbox"]:focus {
 .substep {
     display: flex;
     flex-direction: column;
-    gap: 1em;
-    margin: -0.6% 0 2.5%;
+    gap: 0.5em;
 }
 
 .photo {
@@ -242,16 +257,23 @@ input[type="checkbox"]:focus {
 }
 
 .feedback {
-    padding: 5% 12.5%;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     text-align: center;
     background-color: #11111c;
 }
 
+.feedbackTitle {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75em;
+    margin: 1em 0;
+}
+
 .form {
-    margin: 2.5% 5.35%;
-    padding: 3%;
+    margin: 5% 0;
+    padding: 7% 5%;
     text-align: start;
     border-radius: 24px;
     background-color: #272135;
@@ -261,15 +283,22 @@ input[type="checkbox"]:focus {
     margin: 1.5em 0;
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 0.5em;
     label {
         font-family: "Open Sans Bold", sans-serif;
-        font-size: 1.5em;
+        font-size: 1.25em;
     }
 }
 
-input[type=text], textarea {
-    padding: 0.8em;
+#nameDiv {
+    display: flex;
+    margin-block-start: 0;
+    align-items: center;
+} 
+
+#nameInput {
+    width: 100%;
+    padding: 5%;
     box-sizing: border-box;
     border: none;
     outline: transparent solid 3px;
@@ -280,38 +309,44 @@ input[type=text], textarea {
     transition: 0.3s;
 }
 
-input[type=text]:focus, textarea:focus {
+#nameInput:focus {
     outline: #920ebd solid 3px;
 }
 
-#nameDiv, #imgDiv {
+#imgDiv {
     display: flex;
     align-items: center;
 }
 
-#nameDiv {
-    margin-block-start: 0;
-}
-
-#nameInput {
-    flex: 1;
-}
-
-#imgInput { 
-    padding: 0.8em;
-    border: none;
+#imgInput {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 0.5em;
     border-radius: 6px;
     background-color: #920ebd;
     color: #ffffff;
 }
 
-textarea {
-    resize: none;
-    height: 10.5em;
-}
-
 #expDiv {
     position: relative;
+}
+
+#expInput {
+    resize: none;
+    height: 10.5em;
+    padding: 5%;
+    box-sizing: border-box;
+    border: none;
+    outline: transparent solid 3px;
+    border-radius: 5px;
+    background-color: #11111c;
+    font-size: 1em;
+    color: #f5f5f5;
+    transition: 0.3s;
+}
+
+#expInput:focus {
+    outline: #920ebd solid 3px;
 }
 
 #charDiv {
