--- a/style.css
+++ b/style.css
@@ -15,19 +15,31 @@
     font-size: 16px;
 }
 
+[data-theme="light"] {
+    --color-bg1: #e6e6e6;
+    --color-bg2: #ffffff;
+    --color-fg: #270044;
+  }
+  
+[data-theme="dark"] {
+    --color-bg1: #11111c;
+    --color-bg2: #272135;
+    --color-fg: #ffffff;
+  }
+
 body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    color:#ffffff;
+    color:var(--color-fg);
 }
 
-h1, h2, h3, h4, #imgInput, .submitBtn, .wallBtn {
+h1, h2, h3, h4 {
     font-family: "Open Sans Bold", sans-serif;
 }
 
 h1, h2 {
-    color: #920ebd;
+    color: #9925c0;
 }
 
 h1 {
@@ -64,80 +76,83 @@ strong {
     padding: 0 0.1em;
     font-size: inherit;
     color: #ffffff;
-    background-color: #920ebd;
+    background-color: #9925c0;
 }
 
 .top {
-    padding: 12.5% 4%;
+    padding: 2em 4%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     gap: 2em;
-    background-color: #272135;
+    background-color: var(--color-bg2);
     h1, h2 {
         margin: 0;
     }
     h2 {
         font-size: 2.5em;
-        color: #ffffff;
+        color: var(--color-fg);
     }
 }
 
 .what {
     display: flex;
     flex-direction: column;
-    padding: 6% 7.5% 1%;
-    background-color: #11111c;
+    padding: 2em 7.5% 1em;
+    background-color: var(--color-bg1);
 }
 
 .cautions {
     padding: 1em 0;
-    background-color: #272135;
+    background-color: var(--color-bg2);
 }
 
 .cautionsTitle {
-    padding: 5% 7.5%;
+    padding: 2em 7.5%;
 }
 
 .caution {
-    margin: 0 0 7.5%;
-    padding: 6% 7.5%;
-    background-color: #11111c;
+    margin: 0 0 2em;
+    padding: 1.75em 7.5% 1.5em;
+    background-color: var(--color-bg1);
 }
 
 .need {
-    padding: 12.5% 7.5%;
+    padding: 2.5em 7.5%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #11111c;
+    background-color: var(--color-bg1);
 }
 
 .needTitle {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-block-end: 1.5em;
+    p {
+        margin: 0;
+    }
 }
 
 .checkboxes {
     display: flex;
     flex-direction: column;
     gap: 2em;
-    margin: 5%;
-    background-color: #11111c;
+    margin: 1em 5%;
+    background-color: var(--color-bg1);
 }
 
 .needles {
+    height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: start;
-    padding: 10%;
+    padding: 1.5em 10% 2em;
     gap: 0.5em;
     border-radius: 24px;
-    background-color: #272135;
+    background-color: var(--color-bg2);
     h3 {
         margin-block-start: 0;
     }
@@ -163,9 +178,9 @@ input[type="checkbox"] {
     width: 1em;
     height: 1em;
     font: inherit;
-    color: #ffffff;
-    background-color: #11111c;
-    border: 0.15em solid #ffffff;
+    color: var(--color-fg);
+    background-color: var(--color-bg1);
+    border: 0.15em solid var(--color-fg);
     border-radius: 0.15em;
     display: grid;
     place-content: center;
@@ -176,7 +191,7 @@ input[type="checkbox"]::before {
     width: 0.65em;
     height: 0.65em;
     transform: scale(0);
-    box-shadow: inset 1em 1em #ffffff;
+    box-shadow: inset 1em 1em var(--color-fg);
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 }
 
@@ -189,47 +204,26 @@ input[type="checkbox"]:focus {
 }
 
 .steps {
-    padding: 5% 0;
+    padding: 1.5em 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #272135;
+    background-color: var(--color-bg2);
     text-align: center;
 }
 
 .stepsTitle {
-    padding: 5% 3% 0;
+    margin: 0.5em 3% 0;
     display: flex;
     flex-direction: column;
     gap: 1em;
 }
 
-.wallType {
-    margin: 1em 5%;
-    display: flex;
-    gap: 1em;
-}
-
-.wallBtn {
-    flex: 1;
-    height: 3em;
-    border: none;
-    border-radius: 12px;
-    font-size: 1em;
-    background-color: #11111c;
-    color: #ffffff;
-}
-
-.wallBtn:hover {
-    transition: 0.25s;
-    scale: 1.05;
-}
-
-#concreteSteps {
+.stepsDiv {
     display: flex;
     flex-direction: column;
     gap: 2em;
-    margin: 5%;
+    margin: 2em 5%;
     h3 {
         margin: 0
     }
@@ -238,156 +232,86 @@ input[type="checkbox"]:focus {
 .step {
     display: flex;
     flex-direction: column;
-    padding: 10% 7.5%;
+    padding: 2em;
+    gap: 0.75em;
     border-radius: 24px;
-    background-color: #11111c;
+    background-color: var(--color-bg1);
     text-align: start;
 }
 
 .substep {
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
-}
-
-.photo {
-    width: 100%;
-    height: auto;
-    align-self: center;
-}
-
-.feedback {
-    padding: 5%;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    background-color: #11111c;
-}
-
-.feedbackTitle {
-    display: flex;
-    flex-direction: column;
-    gap: 0.75em;
-    margin: 1em 0;
-}
-
-.form {
-    margin: 5% 0;
-    padding: 7% 5%;
-    text-align: start;
-    border-radius: 24px;
-    background-color: #272135;
-}
-
-.formInput {
-    margin: 1.5em 0;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    label {
-        font-family: "Open Sans Bold", sans-serif;
-        font-size: 1.25em;
+    p {
+        margin: 0;
     }
 }
 
-#nameDiv {
-    display: flex;
-    margin-block-start: 0;
-    align-items: center;
-} 
-
-#nameInput {
+.photos {
     width: 100%;
-    padding: 5%;
-    box-sizing: border-box;
-    border: none;
-    outline: transparent solid 3px;
-    border-radius: 5px;
-    background-color: #11111c;
-    font-size: 1em;
-    color: #f5f5f5;
-    transition: 0.3s;
-}
-
-#nameInput:focus {
-    outline: #920ebd solid 3px;
-}
-
-#imgDiv {
+    height: fit-content;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    align-self: center;
 }
 
-#imgInput {
+.row {
+    max-width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.photo, .photoGroup {
     width: 100%;
-    box-sizing: border-box;
-    padding: 0.5em;
-    border-radius: 6px;
-    background-color: #920ebd;
-    color: #ffffff;
+    object-fit: cover;
 }
 
-#expDiv {
-    position: relative;
+.photo {
+    border-radius: 15px;
 }
 
-#expInput {
-    resize: none;
-    height: 10.5em;
-    padding: 5%;
-    box-sizing: border-box;
-    border: none;
-    outline: transparent solid 3px;
-    border-radius: 5px;
-    background-color: #11111c;
-    font-size: 1em;
-    color: #f5f5f5;
-    transition: 0.3s;
-}
-
-#expInput:focus {
-    outline: #920ebd solid 3px;
-}
-
-#charDiv {
-    position: absolute;
-    bottom: 0;
-    width: 4em;
-    text-align: end;
-}
-
-#charCount {
-    color: #d3d3d3;
-}
-
-.submit {
-    display: flex;
-    justify-content: center;
-}
-
-.submitBtn {
-    flex: 1;
-    padding: 0.5em;
-    border: none;
-    border-radius: 6px;
-    background-color: #920ebd;
-    font-size: 1.5em;
-    color: #ffffff;
-}
 
 footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0.25em 0;
-    background-color: #272135;
+    gap: 0.5em;
+    background-color: var(--color-bg1);
     a {
-        margin: 0 0.5em;
+        margin: 0;
         padding: 0;
-    }
+    }    
 }
 
 a > img {
     width: 2em;
     height: 2em;
+}
+
+@media (min-width: 900px) {
+    .checkboxes {
+        flex-direction: row;
+        justify-content: center;
+    }
+    .needles {
+        padding: 1.5em 4% 2em;
+        gap: 0.5em;
+        border-radius: 24px;
+        background-color: var(--color-bg2);
+        h3 {
+            margin-block-start: 0;
+        }
+    }
+    .stepsDiv {
+        margin: 2em 10%;
+    }
+    .step {
+        padding: 2.5em;
+    }
+}
+
+@media (min-width: 1440px) {
+    .stepsDiv {
+        margin: 2em 15%;
+    }
 }
